# NUC970_NuWriter_CMD

./: .gitignore  99-nuc970_isp.rules  99-nuvoton_isp.rules  Makefile.am  Makefile.in  NucLibUsb.c  README  README.md  Serial.h  UXmodem.c  common.h  config.h.in  configure  configure.ac  crc32.c  device.c  main.c  parse.c  read_file.c
nudata/sys_cfg/: N9H30F61IE.ini  NUC972DF71Y.ini  NUC972DF71YC.ini  NUC976DK41Y.ini  NUC976DK51Y.ini  NUC977DK71Y.ini  SCM603L128UE.ini
